examples/invalid/diff_types_addition.mini
int a = 4 ;
res = a + 3 ;

double = 1.5 ;
double exc ;
exc = 1.5 + 10 ;